Updated api docs and tests
